--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "build": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,8 @@
     "jsdom": "^26.1.0",
     "multer": "^1.4.5-lts.2",
     "open-google-translator": "^1.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
